package ci553.happyshop.client.customer;

import ci553.happyshop.catalogue.Order;
import ci553.happyshop.catalogue.Product;
import ci553.happyshop.storageAccess.DatabaseRW;
import ci553.happyshop.orderManagement.OrderHub;
import ci553.happyshop.utility.StorageLocation;
import ci553.happyshop.utility.ProductListFormatter;

import java.io.IOException;
import java.nio.file.Path;
import java.nio.file.Paths;
import java.sql.SQLException;
import java.util.ArrayList;
import java.util.HashMap;
import java.util.Map;
import java.util.Comparator;

/**
 * TODO
 * You can either directly modify the CustomerModel class to implement the required tasks,
 * or create a subclass of CustomerModel and override specific methods where appropriate.
 */
public class CustomerModel {
    public CustomerView cusView;
    public DatabaseRW databaseRW; //Interface type, not specific implementation
                                  //Benefits: Flexibility: Easily change the database implementation.

    private Product theProduct =null; // product found from search
    private ArrayList<Product> trolley =  new ArrayList<>(); // a list of products in trolley

    // Four UI elements to be passed to CustomerView for display updates.
    private String imageName = "imageHolder.jpg";                // Image to show in product preview (Search Page)
    private String displayLaSearchResult = "No Product was searched yet"; // Label showing search result message (Search Page)
    private String displayTaTrolley = "";                                // Text area content showing current trolley items (Trolley Page)
    private String displayTaReceipt = "";                                // Text area content showing receipt after checkout (Receipt Page)

    //SELECT productID, description, image, unitPrice,inStock quantity
    void search() throws SQLException {
        String productId = cusView.tfId.getText().trim();
        if(!productId.isEmpty()){
            theProduct = databaseRW.searchByProductId(productId); //search database
            if(theProduct != null && theProduct.getStockQuantity()>0){
                double unitPrice = theProduct.getUnitPrice();
                String description = theProduct.getProductDescription();
                int stock = theProduct.getStockQuantity();

                String baseInfo = String.format("Product_Id: %s\n%s,\nPrice: £%.2f", productId, description, unitPrice);
                String quantityInfo = stock < 100 ? String.format("\n%d units left.", stock) : "";
                displayLaSearchResult = baseInfo + quantityInfo;
                System.out.println(displayLaSearchResult);
            }
            else{
                theProduct=null;
                displayLaSearchResult = "Sorry this item is now out of stock" + productId;
                System.out.println("No Product was found with ID " + productId);
            }
        }else{
            theProduct=null;
            displayLaSearchResult = "Please type ProductID";
            System.out.println("Please type ProductID.");
        }
        updateView();
    }



    //TODO list 1
    // 1. Merges items with the same product ID (combining their quantities).
    // 2. Sorts the products in the trolley by product ID.

    void addToTrolley() {
        if (theProduct == null) {
            displayLaSearchResult = "must search and get an available product before add to trolley";
            displayTaReceipt = "";
            updateView();
            return;
        }

        String id = theProduct.getProductId();


        for (Product tp : trolley) {
            if (tp.getProductId().equals(id)) {
                tp.setOrderedQuantity(tp.getOrderedQuantity() + 1);
                displayTaTrolley = ProductListFormatter.buildString(trolley);
                displayTaReceipt = "";
                updateView();
                return;
            }
        }


        Product p = new Product(
                theProduct.getProductId(),
                theProduct.getProductDescription(),
                theProduct.getProductImageName(),
                theProduct.getUnitPrice(),
                theProduct.getStockQuantity()
        );
        p.setOrderedQuantity(1);
        trolley.add(p);

        // 3) Keep trolley tidy
        trolley.sort(Comparator.comparing(Product::getProductId));

        displayTaTrolley = ProductListFormatter.buildString(trolley);
        displayTaReceipt = "";
        updateView();
    }




    // TODO list 2
    void checkOut() throws IOException, SQLException {

        if (!trolley.isEmpty()) {

            ArrayList<Product> groupedTrolley = groupProductsById(trolley);
            ArrayList<Product> insufficientProducts = databaseRW.purchaseStocks(groupedTrolley);

            if (insufficientProducts.isEmpty()) { // stock is sufficient

                OrderHub orderHub = OrderHub.getOrderHub();
                Order theOrder = orderHub.newOrder(trolley);

                trolley.clear();
                displayTaTrolley = "";
                displayTaReceipt = String.format(
                        "Order_ID: %s\nOrdered_Date_Time: %s\n%s",
                        theOrder.getOrderId(),
                        theOrder.getOrderedDateTime(),
                        ProductListFormatter.buildString(theOrder.getProductList())
                );

                System.out.println(displayTaReceipt);

            } else { // insufficient stock

                StringBuilder errorMsg = new StringBuilder();

                for (Product p : insufficientProducts) {
                    errorMsg.append("\u2022 ")
                            .append(p.getProductId()).append(", ")
                            .append(p.getProductDescription()).append(" (only ")
                            .append(p.getStockQuantity()).append(" available, ")
                            .append(p.getOrderedQuantity()).append(" requested)\n");
                }

                // 1) Remove insufficient products from trolley
                java.util.Set<String> insufficientIds = insufficientProducts.stream()
                        .map(Product::getProductId)
                        .collect(java.util.stream.Collectors.toSet());

                trolley.removeIf(tp -> insufficientIds.contains(tp.getProductId()));

                // updates the trolley display after removal
                displayTaTrolley = ProductListFormatter.buildString(trolley);

                //  Shows the message window instead of changing displayLaSearchResult
                new RemoveProductNotifier().showRemovalMsg(errorMsg.toString());

                // notifier.closeNotifierWindow();

                theProduct = null;
            }

        } else { // trolley empty
            displayTaTrolley = "Your trolley is empty";
            System.out.println("Your trolley is empty");
        }

        updateView();
    }

    /**
     * Groups products by their productId to optimize database queries and updates.
     * By grouping products, we can check the stock for a given `productId` once, rather than repeatedly
     */
    private ArrayList<Product> groupProductsById(ArrayList<Product> proList) {
        Map<String, Product> grouped = new HashMap<>();
        for (Product p : proList) {
            String id = p.getProductId();
            if (grouped.containsKey(id)) {
                Product existing = grouped.get(id);
                existing.setOrderedQuantity(existing.getOrderedQuantity() + p.getOrderedQuantity());
            } else {
                // Make a shallow copy to avoid modifying the original
                grouped.put(id,new Product(p.getProductId(),p.getProductDescription(),
                        p.getProductImageName(),p.getUnitPrice(),p.getStockQuantity()));
            }
        }
        return new ArrayList<>(grouped.values());
    }

    void cancel(){
        trolley.clear();
        displayTaTrolley="";
        updateView();
    }
    void closeReceipt(){
        displayTaReceipt="";
    }

    void updateView() {
        if(theProduct != null){
            imageName = theProduct.getProductImageName();
            String relativeImageUrl = StorageLocation.imageFolder +imageName; //relative file path, eg images/0001.jpg
            // Get the full absolute path to the image
            Path imageFullPath = Paths.get(relativeImageUrl).toAbsolutePath();
            imageName = imageFullPath.toUri().toString(); //get the image full Uri then convert to String
            System.out.println("Image absolute path: " + imageFullPath); // Debugging to ensure path is correct
        }
        else{
            imageName = "imageHolder.jpg";
        }
        cusView.update(imageName, displayLaSearchResult, displayTaTrolley,displayTaReceipt);
    }
     // extra notes:
     //Path.toUri(): Converts a Path object (a file or a directory path) to a URI object.
     //File.toURI(): Converts a File object (a file on the filesystem) to a URI object

    //for test only
    public ArrayList<Product> getTrolley() {
        return trolley;
    }



    public void showAllAvailableProducts() throws SQLException {
        ArrayList<Product> products = databaseRW.searchProduct("");
        ArrayList<Product> available = new ArrayList<>();
        for (Product p : products) {
            if (p.getStockQuantity() > 0) {
                available.add(p);
            }
        }

        displayLaSearchResult = ProductListFormatter.buildString(available);
        updateView();

    }

}
